# CmdVault

./: .gitignore  README.md  README_zh.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: autostart.rs  command.rs  export.rs  mod.rs  shortcut.rs  sync.rs
src-tauri/src/db/: mod.rs  schema.rs
src/lib/components/: CommandEditor.svelte  CommandItem.svelte  CommandList.svelte  EmptyState.svelte  SearchInput.svelte  Settings.svelte  ShortcutRecorder.svelte  Toast.svelte  index.ts
src/lib/stores/: commands.ts  settings.ts
src/lib/utils/: fileOperations.ts
